Correção na Documentação

--- a/DataFrame/5.Indice_Datas_DataFrame.ipynb
+++ b/DataFrame/5.Indice_Datas_DataFrame.ipynb
@@ -25,24 +25,18 @@
     }
    ],
    "source": [
+    "#Importar bibliotecas.\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# Gerar index com datas entre 01/01/2013 até 06/01/2013.\n",
     "\n",
+    "# Gerar index com datas entre 01/01/2013 até 06/01/2013.\n",
     "dates = pd.date_range(\"20130101\", periods=6)\n",
     "print(dates)\n",
-    "# Gerar DataFrame.\n",
     "\n",
+    "# Gerar DataFrame com índice de datas.\n",
     "df = pd.DataFrame(np.random.randn(6,4), index=dates, columns=list(\"ABCD\"))\n",
-    "print(df)\n"
+    "print(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
