--- a/Testes/Azure_Data_Lake_Storage_Gen2.ipynb
+++ b/Testes/Azure_Data_Lake_Storage_Gen2.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMsUIaRz1GCXwZz/1MV3SrO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/HLeunam/Pandas/blob/main/Azure_Data_Lake_Storage_Gen2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -40,6 +24,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "v6pU9f8tDHxW"
+      },
+      "outputs": [],
       "source": [
         "#Importar bibliotecas.\n",
         "import os\n",
@@ -49,15 +38,15 @@
         "      FileSystemClient\n",
         ")\n",
         "from azure.identity import DefaultAzureCredential"
-      ],
-      "metadata": {
-        "id": "v6pU9f8tDHxW"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J6dR0CN9DWmY"
+      },
+      "outputs": [],
       "source": [
         "# Autorizar acesso e conectar às fontes de dados.\n",
         "def get_service_client_toke_credential(self, account_name) -> DataLakeServiceClient:\n",
@@ -67,59 +56,59 @@
         "    service_client = DataLakeServiceClient(account_url, credential=token_credential)\n",
         "\n",
         "    return service_client"
-      ],
-      "metadata": {
-        "id": "J6dR0CN9DWmY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZYNB0DKEEmNX"
+      },
+      "outputs": [],
       "source": [
         "# Criar um coontainer.\n",
         "def create_file_system(self, service_client: DataLakeServiceClient, file_system_name: str) -> FileSystemClient:\n",
         "    file_system_client = service_client.create_file_system(file_system = file_system_name)\n",
         "\n",
         "    return file_system_client"
-      ],
-      "metadata": {
-        "id": "ZYNB0DKEEmNX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1xenb0hYFd19"
+      },
+      "outputs": [],
       "source": [
         "# Criar um diretório.\n",
         "def create_file_system(self, file_system_client: FileSystemClient, directory_name: str) -> DataLakeDirectoryClient:\n",
         "    directory_client = file_system_client.create_directory(directory_name)\n",
         "\n",
         "    return directory_client\n"
-      ],
-      "metadata": {
-        "id": "1xenb0hYFd19"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jG-WqMrTHYFu"
+      },
+      "outputs": [],
       "source": [
         "# Renomear ou mover um diretório.\n",
         "def rename_directory(self, directory_client: DataLakeDirectoryClient, new_dir_name: str):\n",
         "    directory_client.rename_directory(\n",
         "        new_name=f\"{directory_client.file_system_name}/{new_dir_name}\")"
-      ],
-      "metadata": {
-        "id": "jG-WqMrTHYFu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PUFeXxDKH6ct"
+      },
+      "outputs": [],
       "source": [
         "# Carregar um arquivo em um diretório.\n",
         "def upload_file_to_directory (self, directory_client: DataLakeDirectoryClient, local_path: str, file_name: str):\n",
@@ -127,15 +116,15 @@
         "\n",
         "    with open(file=os.path.join(local_path, file_name), mode=\"rb\") as data:\n",
         "        file_client.upload_data(data, overwrite = True) # Comando para carregar e sobrescrever os dados existentes."
-      ],
-      "metadata": {
-        "id": "PUFeXxDKH6ct"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZWPraJeeLd-j"
+      },
+      "outputs": [],
       "source": [
         "# Anexar dados a um arquivo.\n",
         "def append_data_to_file(self, directory_client: DataLakeDirectoryClient, file_name: str):\n",
@@ -146,15 +135,15 @@
         "    file_client.append_data(data, offset=file_size, length=len(data))\n",
         "\n",
         "    file_client.flush_data(file_size + len(data))"
-      ],
-      "metadata": {
-        "id": "ZWPraJeeLd-j"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uCKeHjAsMPgX"
+      },
+      "outputs": [],
       "source": [
         "# Baixar de um diretório.\n",
         "def download_file_from_directory(self, directory_client: DataLakeDirectoryClient, local_path: str, file_name: str):\n",
@@ -164,21 +153,23 @@
         "        download = file_client_download_file()\n",
         "        local_file.write(download.readall())\n",
         "        local_file.close()"
-      ],
-      "metadata": {
-        "id": "uCKeHjAsMPgX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pQB-qkYqXqrL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMsUIaRz1GCXwZz/1MV3SrO",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
