--- a/Capítulo 3 - Estrutura de dados DataFrame/3.2 Técnicas para Consulta e Modificação de dados.ipynb
+++ b/Capítulo 3 - Estrutura de dados DataFrame/3.2 Técnicas para Consulta e Modificação de dados.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,20 +228,143 @@
     "#P15: Importação de CSV padrão para um DataFrame.\n",
     "import pandas as pd\n",
     "\n",
-    "paises = pd.read_csv(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/Capítulo 3 - Estrutura de dados DataFrame/paises.csv\", index_col=\"sigla\")\n",
+    "paises = pd.read_csv(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/paises.csv\", index_col=\"sigla\")\n",
     "print(paises)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           nota1  nota2\n",
+      "matricula              \n",
+      "M0012017     9.8    9.5\n",
+      "M0022017     5.3    4.1\n",
+      "M0032017     2.5    8.0\n",
+      "M0042017     7.5    7.5\n"
+     ]
+    }
+   ],
    "source": [
     "#P16: Importação de CSV sem cabeçalho e com \";\" como separador.\n",
     "import pandas as pd\n",
     "\n",
-    "notas = pd.read_csv(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/Capítulo 3 - Estrutura de dados DataFrame/notas.csv\")"
+    "notas = pd.read_csv(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/notas.csv\", sep=\";\", names=['matricula', 'nota1', 'nota2'], index_col='matricula')\n",
+    "print(notas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "read_csv() got an unexpected keyword argument 'squeeze'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Importa o arquivo para uma Series.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m serie_gols \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/gols.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msep\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msqueeze\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex_col\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Converte o tipo do indice para datetime e imprime a série.\u001b[39;00m\n\u001b[0;32m      8\u001b[0m serie_gols\u001b[38;5;241m.\u001b[39mindex \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(serie_gols\u001b[38;5;241m.\u001b[39mindex, \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm/\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: read_csv() got an unexpected keyword argument 'squeeze'"
+     ]
+    }
+   ],
+   "source": [
+    "# P17: Importação de arquivo com série temporal.\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Importa o arquivo para uma Series.\n",
+    "serie_gols = pd.read_csv(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/gols.csv\", sep=\" \", squeeze=True, index_col=0)\n",
+    "\n",
+    "# Converte o tipo do indice para datetime e imprime a série.\n",
+    "serie_gols.index = pd.to_datetime(serie_gols.index, format='%d/%m/%Y')\n",
+    "print(serie_gols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arquivo Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            capital   região  população\n",
+      "0   Belém            Sudeste    1446042\n",
+      "1   Belo Horizonte   Sudeste    2513451\n",
+      "2   Boa Vista          Norte     326419\n",
+      "3   Curitiba             Sul    1893977\n",
+      "4   Florianópolis        Sul     477798\n",
+      "5   Macapá             Norte     465495\n",
+      "6   Manaus             Norte    2094391\n",
+      "7   Palmas             Norte     279856\n",
+      "8   Porto Alegre         Sul    1481019\n",
+      "9   Porto Velho        Norte     511219\n",
+      "10  Rio Branco         Norte     377057\n",
+      "11  São Paulo        Sudeste   12038175\n",
+      "12  Rio de Janeiro   Sudeste    6498837\n",
+      "13  Vitória          Sudeste     359555\n"
+     ]
+    }
+   ],
+   "source": [
+    "#P18: Importação de planilha Excel.\n",
+    "import pandas as pd\n",
+    "\n",
+    "cidades = pd.read_excel(r\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/capitais.xlsx\")\n",
+    "print(cidades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arquivo JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  matricula       notas\n",
+      "0  M0012017  [9.8, 9.5]\n",
+      "1  M0022017  [5.3, 4.1]\n",
+      "2  M0032017  [2.5, 8.0]\n",
+      "3  M0042017  [7.5, 7.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importação de planilhas Excel.\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "#(1) - Importa o arquivo JSON para memória.\n",
+    "with open(\"C:/Users/Iris/OneDrive - dmie.com.br/Desktop/Pandas/notas.json\") as f:\n",
+    "    j_notas = json.load(f)\n",
+    "\n",
+    "#(2) - Transfere as informações para um DataFrame.\n",
+    "notas = pd.DataFrame(j_notas, columns= ['matricula', 'notas'])\n",
+    "print(notas)"
    ]
   }
  ],
