Atualiação 4.2 Estatística_Básica

--- a/Capítulo 4 - Conhecendo seus dados/4.2 Estatísticas_Basicas.ipynb
+++ b/Capítulo 4 - Conhecendo seus dados/4.2 Estatísticas_Basicas.ipynb
@@ -132,7 +132,99 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Eixos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Notas Finais: \n",
+      "-----------------\n",
+      "     A1   A2   A3   A4\n",
+      "P1  9.8  5.3  5.5  7.0\n",
+      "P2  7.2  4.0  8.1  7.5\n",
+      "P3  8.0  3.5  7.2  6.5\n",
+      "\n",
+      " Média de cada aluno:\n",
+      "-----------------\n",
+      "A1    8.333333\n",
+      "A2    4.266667\n",
+      "A3    6.933333\n",
+      "A4    7.000000\n",
+      "dtype: float64\n",
+      "\n",
+      " Maior nota cada aluno:\n",
+      "-----------------\n",
+      "A1    9.8\n",
+      "A2    5.3\n",
+      "A3    8.1\n",
+      "A4    7.5\n",
+      "dtype: float64\n",
+      "\n",
+      " Média de cada prova:\n",
+      "-----------------\n",
+      "P1    6.9\n",
+      "P2    6.7\n",
+      "P3    6.3\n",
+      "dtype: float64\n",
+      "\n",
+      " Maior nota de cada prova:\n",
+      "-----------------\n",
+      "P1    9.8\n",
+      "P2    8.1\n",
+      "P3    8.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#P26 Estatísticas sobre colunas e linhas de um DataFrame.\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Cria um DataFrame com as notas de 4 alunos e 3 provas.\n",
+    "notas = pd.DataFrame({\"A1\": [9.8, 7.2, 8.0],\n",
+    "                      \"A2\": [5.3, 4.0, 3.5],\n",
+    "                      \"A3\": [5.5, 8.1, 7.2],\n",
+    "                      \"A4\": [7.0, 7.5, 6.5]},\n",
+    "                      index=['P1','P2','P3']) # Define os índices.\n",
+    "\n",
+    "# Imprime o DataFrame\n",
+    "print(\"\\n Notas Finais: \")\n",
+    "print(\"-----------------\")\n",
+    "print(notas)\n",
+    "\n",
+    "# Computa e imprime as estatísticas por aluno e prova.\n",
+    "print(\"\\n Média de cada aluno:\")\n",
+    "print(\"-----------------\")\n",
+    "print(notas.mean())\n",
+    "\n",
+    "print(\"\\n Maior nota cada aluno:\")\n",
+    "print(\"-----------------\")\n",
+    "print(notas.max())\n",
+    "\n",
+    "print(\"\\n Média de cada prova:\")\n",
+    "print(\"-----------------\")\n",
+    "print(notas.mean(axis=1))\n",
+    "\n",
+    "print(\"\\n Maior nota de cada prova:\")\n",
+    "print(\"-----------------\")\n",
+    "print(notas.max(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em resumo: O padrão da pandas é computar estatísticas por colunas. Para computar por linhas, você deve utilizar o parâmetro axis = 1"
+   ]
   }
  ],
  "metadata": {
