--- a/Projeto Prático/Projeto_Pratico.ipynb
+++ b/Projeto Prático/Projeto_Pratico.ipynb
@@ -64,9 +64,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "head():\n",
+      "             name  landmass  zone  area  population  language  religion  bars  \\\n",
+      "0     Afghanistan         5     1   648          16        10         2     0   \n",
+      "1         Albania         3     1    29           3         6         6     0   \n",
+      "2         Algeria         4     1  2388          20         8         2     2   \n",
+      "3  American-Samoa         6     3     0           0         1         1     0   \n",
+      "4         Andorra         3     1     0           0         6         0     3   \n",
+      "\n",
+      "   stripes  colours  ...  saltires  quarters  sunstars  crescent  triangle  \\\n",
+      "0        3        5  ...         0         0         1         0         0   \n",
+      "1        0        3  ...         0         0         1         0         0   \n",
+      "2        0        3  ...         0         0         1         1         0   \n",
+      "3        0        5  ...         0         0         0         0         1   \n",
+      "4        0        3  ...         0         0         0         0         0   \n",
+      "\n",
+      "   icon  animate text  topleft  botright  \n",
+      "0     1        0    0    black     green  \n",
+      "1     0        1    0      red       red  \n",
+      "2     0        0    0    green     white  \n",
+      "3     1        1    0     blue       red  \n",
+      "4     0        0    0     blue       red  \n",
+      "\n",
+      "[5 rows x 30 columns]\n",
+      "--------------------------------------------------\n",
+      "tail():\n",
+      "              name  landmass  zone  area  population  language  religion  \\\n",
+      "189  Western-Samoa         6     3     3           0         1         1   \n",
+      "190     Yugoslavia         3     1   256          22         6         6   \n",
+      "191          Zaire         4     2   905          28        10         5   \n",
+      "192         Zambia         4     2   753           6        10         5   \n",
+      "193       Zimbabwe         4     2   391           8        10         5   \n",
+      "\n",
+      "     bars  stripes  colours  ...  saltires  quarters  sunstars  crescent  \\\n",
+      "189     0        0        3  ...         0         1         5         0   \n",
+      "190     0        3        4  ...         0         0         1         0   \n",
+      "191     0        0        4  ...         0         0         0         0   \n",
+      "192     3        0        4  ...         0         0         0         0   \n",
+      "193     0        7        5  ...         0         0         1         0   \n",
+      "\n",
+      "     triangle  icon  animate text  topleft  botright  \n",
+      "189         0     0        0    0     blue       red  \n",
+      "190         0     0        0    0     blue       red  \n",
+      "191         0     1        1    0    green     green  \n",
+      "192         0     0        1    0    green     brown  \n",
+      "193         1     1        1    0    green     green  \n",
+      "\n",
+      "[5 rows x 30 columns]\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# P21: Quais os países que também têm verde, amarelo, azul\n",
     "#      e branco entre as cores de sua bandeira nacional?\n",
@@ -74,7 +129,7 @@
     "\n",
     "#----------------------------------------------------------\n",
     "#(1) - Importa a base de dados.\n",
-    "flags = pd.read_csv('c:/bases/flags.csv')\n",
+    "flags = pd.read_csv(r'C:\\Users\\henri\\OneDrive\\Pessoal\\Anotações\\GitHub\\Pandas\\Bases\\flags.csv')\n",
     "#----------------------------------------------------------\n",
     "\n",
     "#----------------------------------------------------------\n",
@@ -86,8 +141,46 @@
     "\n",
     "# imprime as últimas linhas.\n",
     "print('tail():'); print(flags.tail())\n",
-    "print('--------------------------------------------------')\n",
-    "\n",
+    "print('--------------------------------------------------')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paises que possuem todas as cores:\n",
+      "17                       Belize\n",
+      "19                      Bermuda\n",
+      "23                       Brazil\n",
+      "24         British-Virgin-Isles\n",
+      "26                     Bulgaria\n",
+      "33               Cayman-Islands\n",
+      "34     Central-African-Republic\n",
+      "48                     Dominica\n",
+      "56           Falklands-Malvinas\n",
+      "57                         Fiji\n",
+      "71                         Guam\n",
+      "78                    Hong-Kong\n",
+      "116                  Montserrat\n",
+      "135                     Parguay\n",
+      "139                    Portugal\n",
+      "142                     Romania\n",
+      "151             Soloman-Islands\n",
+      "158                   St-Helena\n",
+      "161                  St-Vincent\n",
+      "176         Turks-Cocos-Islands\n",
+      "182             US-Virgin-Isles\n",
+      "187                   Venezuela\n",
+      "Name: name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
     "#----------------------------------------------------------\n",
     "# (3) - Quem tem verde, amarelo, azul e branco na bandeira.\n",
     "#----------------------------------------------------------\n",
@@ -108,8 +201,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
