Utilização de arquivos novos

--- a/Projeto Prático/Projeto_Pratico.ipynb
+++ b/Projeto Prático/Projeto_Pratico.ipynb
@@ -64,64 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "head():\n",
-      "             name  landmass  zone  area  population  language  religion  bars  \\\n",
-      "0     Afghanistan         5     1   648          16        10         2     0   \n",
-      "1         Albania         3     1    29           3         6         6     0   \n",
-      "2         Algeria         4     1  2388          20         8         2     2   \n",
-      "3  American-Samoa         6     3     0           0         1         1     0   \n",
-      "4         Andorra         3     1     0           0         6         0     3   \n",
-      "\n",
-      "   stripes  colours  ...  saltires  quarters  sunstars  crescent  triangle  \\\n",
-      "0        3        5  ...         0         0         1         0         0   \n",
-      "1        0        3  ...         0         0         1         0         0   \n",
-      "2        0        3  ...         0         0         1         1         0   \n",
-      "3        0        5  ...         0         0         0         0         1   \n",
-      "4        0        3  ...         0         0         0         0         0   \n",
-      "\n",
-      "   icon  animate text  topleft  botright  \n",
-      "0     1        0    0    black     green  \n",
-      "1     0        1    0      red       red  \n",
-      "2     0        0    0    green     white  \n",
-      "3     1        1    0     blue       red  \n",
-      "4     0        0    0     blue       red  \n",
-      "\n",
-      "[5 rows x 30 columns]\n",
-      "--------------------------------------------------\n",
-      "tail():\n",
-      "              name  landmass  zone  area  population  language  religion  \\\n",
-      "189  Western-Samoa         6     3     3           0         1         1   \n",
-      "190     Yugoslavia         3     1   256          22         6         6   \n",
-      "191          Zaire         4     2   905          28        10         5   \n",
-      "192         Zambia         4     2   753           6        10         5   \n",
-      "193       Zimbabwe         4     2   391           8        10         5   \n",
-      "\n",
-      "     bars  stripes  colours  ...  saltires  quarters  sunstars  crescent  \\\n",
-      "189     0        0        3  ...         0         1         5         0   \n",
-      "190     0        3        4  ...         0         0         1         0   \n",
-      "191     0        0        4  ...         0         0         0         0   \n",
-      "192     3        0        4  ...         0         0         0         0   \n",
-      "193     0        7        5  ...         0         0         1         0   \n",
-      "\n",
-      "     triangle  icon  animate text  topleft  botright  \n",
-      "189         0     0        0    0     blue       red  \n",
-      "190         0     0        0    0     blue       red  \n",
-      "191         0     1        1    0    green     green  \n",
-      "192         0     0        1    0    green     brown  \n",
-      "193         1     1        1    0    green     green  \n",
-      "\n",
-      "[5 rows x 30 columns]\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# P21: Quais os países que também têm verde, amarelo, azul\n",
     "#      e branco entre as cores de sua bandeira nacional?\n",
@@ -146,40 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Paises que possuem todas as cores:\n",
-      "17                       Belize\n",
-      "19                      Bermuda\n",
-      "23                       Brazil\n",
-      "24         British-Virgin-Isles\n",
-      "26                     Bulgaria\n",
-      "33               Cayman-Islands\n",
-      "34     Central-African-Republic\n",
-      "48                     Dominica\n",
-      "56           Falklands-Malvinas\n",
-      "57                         Fiji\n",
-      "71                         Guam\n",
-      "78                    Hong-Kong\n",
-      "116                  Montserrat\n",
-      "135                     Parguay\n",
-      "139                    Portugal\n",
-      "142                     Romania\n",
-      "151             Soloman-Islands\n",
-      "158                   St-Helena\n",
-      "161                  St-Vincent\n",
-      "176         Turks-Cocos-Islands\n",
-      "182             US-Virgin-Isles\n",
-      "187                   Venezuela\n",
-      "Name: name, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#----------------------------------------------------------\n",
     "# (3) - Quem tem verde, amarelo, azul e branco na bandeira.\n",
@@ -197,6 +111,166 @@
     "# Imprime os nomes dos países com as quatros cores.\n",
     "print('Paises que possuem todas as cores:')\n",
     "print(flags[tem_todas.values]['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.7 Projeto Prático - Estudando o DataSet Flags."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Obter as propriedades de todos os atributos de base flags;\n",
+    "\n",
+    "2. Gerar uma tabela de frequência a partir um conjunto de atributos selecionados;\n",
+    "\n",
+    "3. Gerar um gráfico de barras para um conjunto de atributos selecionados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               name  landmass  zone  area  population  language  religion  \\\n",
+      "0       Afghanistan         5     1   648          16        10         2   \n",
+      "1           Albania         3     1    29           3         6         6   \n",
+      "2           Algeria         4     1  2388          20         8         2   \n",
+      "3    American-Samoa         6     3     0           0         1         1   \n",
+      "4           Andorra         3     1     0           0         6         0   \n",
+      "..              ...       ...   ...   ...         ...       ...       ...   \n",
+      "189   Western-Samoa         6     3     3           0         1         1   \n",
+      "190      Yugoslavia         3     1   256          22         6         6   \n",
+      "191           Zaire         4     2   905          28        10         5   \n",
+      "192          Zambia         4     2   753           6        10         5   \n",
+      "193        Zimbabwe         4     2   391           8        10         5   \n",
+      "\n",
+      "     bars  stripes  colours  ...  saltires  quarters  sunstars  crescent  \\\n",
+      "0       0        3        5  ...         0         0         1         0   \n",
+      "1       0        0        3  ...         0         0         1         0   \n",
+      "2       2        0        3  ...         0         0         1         1   \n",
+      "3       0        0        5  ...         0         0         0         0   \n",
+      "4       3        0        3  ...         0         0         0         0   \n",
+      "..    ...      ...      ...  ...       ...       ...       ...       ...   \n",
+      "189     0        0        3  ...         0         1         5         0   \n",
+      "190     0        3        4  ...         0         0         1         0   \n",
+      "191     0        0        4  ...         0         0         0         0   \n",
+      "192     3        0        4  ...         0         0         0         0   \n",
+      "193     0        7        5  ...         0         0         1         0   \n",
+      "\n",
+      "     triangle  icon  animate text  topleft  botright  \n",
+      "0           0     1        0    0    black     green  \n",
+      "1           0     0        1    0      red       red  \n",
+      "2           0     0        0    0    green     white  \n",
+      "3           1     1        1    0     blue       red  \n",
+      "4           0     0        0    0     blue       red  \n",
+      "..        ...   ...      ...  ...      ...       ...  \n",
+      "189         0     0        0    0     blue       red  \n",
+      "190         0     0        0    0     blue       red  \n",
+      "191         0     1        1    0    green     green  \n",
+      "192         0     0        1    0    green     brown  \n",
+      "193         1     1        1    0    green     green  \n",
+      "\n",
+      "[194 rows x 30 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#P36: Estudando a base de dados flags.\n",
+    "# 1. Propriedades básicas de cada atributo.\n",
+    "import pandas as pd\n",
+    "\n",
+    "#--------------------------------------------#\n",
+    "# (1) - Importa a base de dados\n",
+    "#--------------------------------------------#\n",
+    "flags = pd.read_csv(r'C:\\Users\\henri\\OneDrive\\Pessoal\\Anotações\\GitHub\\Pandas\\Bases\\flags.csv')\n",
+    "print(flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(+)\n",
+      "(2) atributo: landmass \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [5 3 4 6 1 2]\n",
+      "(3) atributo: zone \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 3 2 4]\n",
+      "(8) atributo: bars \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 2 3 1 5]\n",
+      "(11) atributo: red \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(12) atributo: green \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(13) atributo: blue \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(14) atributo: gold \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(15) atributo: white \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(16) atributo: black \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(17) atributo: orange \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(+)\n",
+      "(19) atributo: circles \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1 4 2]\n",
+      "(20) atributo: crosses \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1 2]\n",
+      "(21) atributo: saltires \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(22) atributo: quarters \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1 4]\n",
+      "(24) atributo: crescent \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(25) atributo: triangle \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(26) atributo: icon \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [1 0]\n",
+      "(27) atributo: animate \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(28) atributo: text \t dtype: int64 \t nulos: False \n",
+      " domínio (primeiros elementos): [0 1]\n",
+      "(29) atributo: topleft \t dtype: object \t nulos: False \n",
+      " domínio (primeiros elementos): ['black' 'red' 'green' 'blue' 'white' 'orange' 'gold']\n",
+      "(+)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#-----------------------------------------------------#\n",
+    "# (2) - Obtém as propriedades básicas de cada atributo.\n",
+    "#-----------------------------------------------------#\n",
+    "i=0\n",
+    "\n",
+    "for c in flags.columns:\n",
+    "    i += 1\n",
+    "    att = flags[c] # atributo\n",
+    "    att_dtype = att.dtype #dtype\n",
+    "    att_tam_dominio = att.unique().size # Tamanho do domínio.\n",
+    "\n",
+    "    att_tem_nulo = any(att.isnull()) # Possui valor nulo?\n",
+    "    if (att_tam_dominio < 8):\n",
+    "        print(\"(\"+str(i)+\") atributo:\", c, \"\\t\",\n",
+    "              \"dtype:\", att_dtype, \"\\t\",\n",
+    "              \"nulos:\", att_tem_nulo, \"\\n\",\n",
+    "              \"domínio (primeiros elementos):\", att.unique() [:8])\n",
+    "    else:\n",
+    "        if (att_dtype == 'object'):\n",
+    "            print(\"(+)\")"
    ]
   }
  ],
